--- a/app/src/main/res/drawable/splashscreen.xml
+++ b/app/src/main/res/drawable/splashscreen.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list android:opacity="opaque"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/white"/>
+    <item android:drawable="@color/grey1"/>
     <item>
         <bitmap android:src="@drawable/calculadora"
-            android:gravity="center"/>
+            android:gravity="center"
+            />
     </item>
 </layer-list>
